--- a/templates/respuesta_ubicacion.html
+++ b/templates/respuesta_ubicacion.html
@@ -6,8 +6,8 @@
     <h1>Respuesta Rápida: ¿Dónde te encuentras ubicado?</h1>
 
     <!-- Respuesta a la ubicación -->
-    <div id="ubicacion-texto" class="container mt-4">
-        <div class="alert alert-info" id="texto-ubicacion">
+    <div id="ubicacion-texto" class="container mt-4" style="max-width: 100%; width: 95%; margin: 0 auto;">
+        <div class="alert alert-info" id="texto-copiable" class="copiable-content" style="font-size: 1.5rem;">
             <p>🌍 Somos una tienda virtual.</p>
             <p>🛵✨ Realizamos entregas a domicilio dentro de Lima Metropolitana.</p>
             <p>🚫 (No contamos con tienda física por el momento).</p>
