--- a/templates/respuesta_pago.html
+++ b/templates/respuesta_pago.html
@@ -7,12 +7,12 @@
 
     <!-- Respuesta al pago -->
     <div id="pago-texto" class="container mt-4" style="max-width: 100%; width: 95%; margin: 0 auto;">
-        <div class="alert alert-info" id="texto-copiable" class="copiable-content" style="font-size: 1.5rem;">
+        <div class="alert alert-info" id="texto-copiable" class="copiable-content" style="font-size: 3.75rem;">
             <p>💳 Sí, aceptamos pago contra entrega para todas las zonas de Lima. 🚚</p>
             <p>📍 Para separar tu pedido, debes abonar S/ 20.00. El saldo restante se paga contra entrega. 😊</p>
             <p>📍 ¡Estamos listos para enviarte tu pedido a cualquier distrito de Lima! ¡Estamos para ayudarte! 😊</p>
         </div>
-        <button class="btn btn-success mt-3" onclick="copiarTexto('texto-pago')">Copiar texto</button>
+        <button class="btn btn-success mt-3" onclick="copiarTexto()" style="font-size: 3.75rem; padding: 15px 30px;">Copiar texto</button>
     </div>
 
     <script>
