Error de sobreposicion de texto

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Respuestas Rápidas
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="position: absolute; z-index: 999; left: 0;">
                     <a class="dropdown-item" href="{{ url_for('respuesta_hola') }}">Hola, ¿Sigue disponible?</a>
                     <a class="dropdown-item" href="{{ url_for('respuesta_precio') }}">Precio de los recuerdos</a>
                     <a class="dropdown-item" href="{{ url_for('cotizar') }}">Desea cotizar</a>
