Agreugue fragments varios

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,8 @@
 
 <!-- ✅ CONTENIDO PRINCIPAL -->
 <div class="container mt-4">
-    {% block content %}{% endblock %}
+    {% block content %}
+    {% endblock %}
 </div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
